k8s/platform/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-paas-redis
  labels:
    app: mlops-paas-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlops-paas-redis
  template:
    metadata:
      labels:
        app: mlops-paas-redis
    spec:
      nodeSelector:
        workload-type: worker
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
