k8s/platform/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-paas-redis
  labels:
    app: mlops-paas-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: mlops-paas-redis
