k8s/platform/redis/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-ha-ingress
spec:
  podSelector: {}
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: {}
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mlops-control-plane
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mlops-model-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: redis-operator
      ports:
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 26379
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9121
